# ctf

./: .gitignore  Dockerfile  babyheap_exploit.py  heap_snapshot_01.txt  heap_snapshot_02.txt  heap_snapshot_04.txt  heap_snapshot_05.txt  heap_snapshot_06.txt  heap_snapshot_07.txt  heap_snapshot_08.txt  heap_snapshot_09.txt  heap_snapshot_11.txt  helper.py  mytemplate.py  notes.wiki  pyproject.toml  requirements.txt  snapshot_002  snapshot_006  snapshot_014  snapshot_016  snapshot_017  snapshot_019  snapshot_020  snapshot_022  snapshot_023  snapshot_024  snapshot_029
Csaw_Quals_2018_Get_it/: core  expl.py
SleepyHolder/: exploit.py  heapheapheap.c  helper.py  snapshot_001  snapshot_002  snapshot_003  snapshot_004  snapshot_005  snapshot_006  snapshot_007  snapshot_008  snapshot_009  snapshot_010  snapshot_011  snapshot_012  snapshot_013  snapshot_014  snapshot_015  snapshot_016  snapshot_017  snapshot_018
babyheap1/: .gdb_history  helper.py  slideshow.py  snapshot_002  snapshot_003  snapshot_004  snapshot_005  snapshot_006  snapshot_007  snapshot_008  snapshot_009  snapshot_010  snapshot_011  snapshot_012  snapshot_013  snapshot_014  snapshot_015  snapshot_016  snapshot_017  snapshot_018  snapshot_019  snapshot_020  snapshot_021  snapshot_022  snapshot_023  snapshot_024  snapshot_025  snapshot_026  snapshot_027  snapshot_028  snapshot_029  solve.py
otus_bof/: deploy.py  exploit.py  ssh_session.sh
picoCTF/: .gdb_history
pwn_gist/: .gdb_history  main.py  overflow  overflow-rop.txt  overflow.c  payload.txt  peda-session-overflow.txt  solve.py  test_shellcode_v2  (+1 more)
(+228 files in other folders)
