[tool.poetry]
name = "ctf"
version = "0.1.0"
description = ""
authors = ["razdva <mor.entharia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pwnlib = "^1.2.1"
pexpect = "^4.8.0"
pynvim = "^0.4.3"
isort = "^5.10.1"
pwntools = "^4.8.0"
black = "^22.3.0"
ropper = "^1.13.6"
pwn = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
